--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "@actions/core": "^1.10.1",
     "openai-ga-codereviewer": "file:"
   }
 }
